# fifa_world_cup_pipeline

./: .dockerignore  .env  .env.example  .gitignore  README.md  docker-compose.yml  dockerfile
dags/: dag_final.py  fifa_world_cup_finals_etl .py  test_dag.py
dags/transforms/: dbt_project.yml
dags/transforms/models/fifa/: Pruebas.code-workspace  fifa_world_cup_finals.sql
fifa_world_cup_pipeline.git/: config  packed-refs
fifa_world_cup_pipeline.git.bfg-report/2025-11-10/08-37-42/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
fifa_world_cup_pipeline.git.bfg-report/2025-11-10/08-37-44/: cache-stats.txt  object-id-map.old-new.txt
fifa_world_cup_pipeline.git.bfg-report/2025-11-10/08-37-44/protected-dirt/: 79db7761-HEAD.csv
fifa_world_cup_pipeline.git/info/: refs
fifa_world_cup_pipeline.git/objects/info/: commit-graph  packs
fifa_world_cup_pipeline.git/objects/pack/: pack-7cc9d6d0189d93f67cba76f175e1baec26acb460.bitmap  pack-7cc9d6d0189d93f67cba76f175e1baec26acb460.idx  pack-7cc9d6d0189d93f67cba76f175e1baec26acb460.pack  pack-7cc9d6d0189d93f67cba76f175e1baec26acb460.rev
postgres/init/: init.sql
project_code/: pyproject.toml
queries/: queries.sql
transformation/: .user.yml  dbt_project.yml  profiles.yml
transformation/models/fifa/: fifa_world_cup_finals.sql  schema.yml
transformation/transforms/: .user.yml
