[project]
name = "fifa-challenge"
version = "0.1.0"
description = ""
authors = [
    {name = "DylanGonFer",email = "dylanferreyra006@gmail.com"}
]
readme = "README.md"
requires-python = "3.9.13"
dependencies = [
    "dbt-postgres (>=1.9.1,<2.0.0)",
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "dbt-airflow (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
